<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="kf5_title_activity_welcome">WelcomeActivity</string>
    <string name="kf5_title_activity_map">MapActivity</string>
    <string name="kf5_hold_on_and_say_something">按住&#160;&#160;说话</string>
    <string name="kf5_title_activity_demo">DemoActivity</string>
    <string name="kf5_release_and_finish">松开&#160;&#160;结束</string>
    <string name="kf5_scroll_to_up_and_cancel">手指上滑，取消发送</string>
    <string name="kf5_release_and_cancel">松开手指，取消发送</string>
    <string name="kf5_last_time_to_say">还可以说%1$ds</string>
    <string name="kf5_title_activity_gif_view">GifViewActivity</string>
    <string name="kf5_title_activity_image_brower">ImageBrowerActivity</string>
    <string name="kf5_viewpager_indicator">%1$d/%2$d</string>
    <string name="kf5_title_activity_recycle_view">RecycleViewActivity</string>
    <string name="kf5_title_activity_count_down">CountDownActivity</string>
    <string name="kf5_title_activity_login">LoginActivity</string>
    <string name="app_name">云客服SDK</string>
    <string name="kf5_remove">移除</string>
    <!-- 欢迎界面 -->
    <string name="kf5_sdk_name">逸创云客服</string>
    <string name="kf5_home_to_use_sdk">欢迎使用逸创云客服SDK</string>
    <string name="kf5_home_to_remind">以下是展示逸创云客服SDK功能的按钮</string>
    <string name="kf5_home_help_button">帮助中心</string>
    <string name="kf5_home_feedback_button">反馈问题</string>
    <string name="kf5_home_look_feedback">查看反馈</string>
    <string name="kf5_title_activity_help_center">HelpCenterActivity</string>
    <string name="kf5_title_activity_base">BaseActivity</string>
    <string name="kf5_title_activity_feed_back">FeedBackActivity</string>
    <string name="kf5_title_activity_look_feed_back">LookFeedBackActivity</string>
    <string name="kf5_net_enable">当前网络未连接</string>
    <string name="kf5_server_unsul">服务器异常</string>
    <string name="kf5_document_content">文档内容</string>
    <string name="kf5_website_brower">网页浏览</string>
    <string name="kf5_setting_su">设置成功</string>
    <string name="kf5_scan_pic">预览</string>
    <string name="kf5_downing_ok" translatable="false">下载成功,文件保存在：\n%1$s</string>
    <string name="kf5_down_attach" translatable="false">是否下载附件%1$s</string>
    <string name="kf5_downing" translatable="false">开始下载...</string>
    <string name="kf5_downed" translatable="false">已经下载</string>
    <string name="kf5_pull_update" translatable="false">向下拖动进行刷新</string>
    <string name="kf5_reless_update" translatable="false">松开进行刷新</string>
    <string name="kf5_update_ing" translatable="false">正在刷新&#8230;</string>
    <string name="kf5_up_update_date" translatable="false">上次刷新 ：%1$s</string>
    <string name="kf5_order_closed">该问题已关闭</string>
    <!-- help_center -->
    <string name="kf5_connect_us">联系我们</string>
    <string name="kf5_area_list">分区列表</string>
    <string name="kf5_search">搜索</string>
    <string name="kf5_search_hint">请输入搜索内容</string>

    <!-- feed_back -->
    <string name="kf5_btn_submit">提交</string>
    <string name="kf5_cancel">取消</string>
    <string name="kf5_edittext_hint">请输入问题</string>

    <!-- look_feed_back -->
    <string name="kf5_feed_back_list">反馈列表</string>
    <string name="kf5_title_activity_feed_back_details">FeedBackDetailsActivity</string>

    <!-- others -->

    <string name="kf5_just">刚刚</string>
    <string name="kf5__day">%1$s天前</string>
    <string name="kf5__second">%1$s秒前</string>
    <string name="kf5__minite">%1$s分钟前</string>
    <string name="kf5__hour">%1$s小时前</string>

    <!-- feed back details -->

    <string name="kf5_send">发送</string>
    <string name="kf5_input_please">请输入问题</string>
    <string name="kf5_input_content">请输入内容</string>
    <string name="kf5_title_activity_help_center_type">HelpCenterTypeActivity</string>
    <string name="kf5_title_activity_help_center_type_details">HelpCenterTypeDetailsActivity</string>
    <!-- feed back -->
    <string name="kf5_submit_success">提交成功</string>
    <string name="kf5_order_title">来自%1$s的工单请求</string>
    <string name="kf5_uploading">上传中&#8230;</string>
    <string name="kf5_kf5_upload_success">上传成功</string>
    <string name="kf5_title_activity_push_setting">PushSettingActivity</string>
    <string name="kf5_title_activity_link_url">LinkUrlActivity</string>
    <string name="kf5_loading" translatable="false">加载数据中......</string>
    <string name="kf5_no_datas" translatable="false">没有更多数据了</string>
    <string name="kf5_message_detail">详细信息</string>
    <string name="kf5_ticket">工单</string>
    <string name="kf5_left">左图</string>
    <string name="kf5_right">右图</string>
    <string name="kf5_rating_content">感谢使用我们的服务,请为此次服务评价:</string>

    <!-- 录音提示相关 -->
    <string name="kf5_voice_normal">按住 说话</string>
    <string name="kf5_voice_recording">松开 结束</string>
    <string name="kf5_want_to_cancle">松开手指，取消发送</string>
    <string name="kf5_up_to_cancel">手指上滑，取消发送</string>
    <string name="kf5_voice_time_hort">录音时间过短</string>
    <string name="kf5_no_feed_back">没有工单反馈信息</string>

    <!-- 图片选择相关 -->
    <string name="kf5_tip_take_photo">拍摄照片</string>
    <string name="kf5_action_done">完成</string>
    <string name="kf5_folder_all">所有照片</string>
    <string name="kf5_msg_no_camera">没有系统相机</string>
    <string name="kf5_msg_amount_limit">最大图片数量不能超过%1$s张</string>
    <string name="kf5_photo_unit">张</string>
    <string name="kf5_image_selector_activity_title">图片选择</string>

    <!-- IM 相关-->
    <string name="kf5_ai_to_agent">转人工</string>
    <string name="kf5_cancel_queue_waiting">去留言</string>

    <!--权限相关-->
    <string name="kf5_write_external_storage">访问您设备上的照片、媒体内容和文件</string>
    <string name="kf5_record">录制音频</string>
    <string name="kf5_call_phone">拨打电话和管理通话</string>
    <string name="kf5_camera">拍摄照片和录制视频</string>
</resources>