<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${relativePackage}.${activityClass}" >

    <RelativeLayout
        android:id="@+id/kf5_feed_back_top_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@color/kf5_title_bar_bg" >

        <ImageView
            android:id="@+id/kf5_return_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:contentDescription="@null"
            android:src="@drawable/kf5_back_img_bg"
            android:visibility="visible" />

        <TextView
            android:id="@+id/kf5_feed_back_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/kf5_dimen_8dp"
            android:layout_marginStart="@dimen/kf5_dimen_8dp"
            android:background="@drawable/kf5_text_view_bg"
            android:padding="@dimen/kf5_dimen_8dp"
            android:text="@string/kf5_cancel"
            android:textColor="@android:color/white"
            android:textSize="@dimen/kf5_text_xh_size"
            android:visibility="gone" />

        <TextView
            android:id="@+id/kf5_feed_back_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/kf5_dimen_12dp"
            android:layout_marginRight="@dimen/kf5_dimen_12dp"
            android:padding="@dimen/kf5_dimen_4dp"
            android:text="@string/kf5_btn_submit"
            android:textColor="#a0a0a0"
            android:textSize="@dimen/kf5_text_xh_size" />

        <TextView
            android:id="@+id/kf5_feed_back_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/kf5_home_feedback_button"
            android:textColor="@android:color/white"
            android:textSize="@dimen/kf5_text_xxh_size" />
    </RelativeLayout>

    <EditText
        android:id="@+id/kf5_feed_back_content_et"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/bottom_layout"
        android:layout_below="@+id/kf5_feed_back_top_layout"
        android:background="@null"
        android:focusable="false"
        android:gravity="top|start"
        android:hint="@string/kf5_edittext_hint"
        android:padding="@dimen/kf5_dimen_16dp"
        android:textColorHint="#6c6c6c" />

    <LinearLayout
        android:id="@+id/bottom_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:padding="@dimen/kf5_dimen_8dp" >

        <ImageView
            android:id="@+id/kf5_feed_back_choice_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@null"
            android:src="@drawable/kf5_choice_img_source" />

        <LinearLayout
            android:id="@+id/kf5_feed_back_image_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/kf5_dimen_4dp"
            android:orientation="vertical"
            android:visibility="gone" >
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>